syntax = "proto3";

package dev.oianmol.opentestlab;

option java_multiple_files = true;

// Represents a device in the device farm.
message DeviceFarmDevice {
  string ipAddress = 1;  // The IP address of the device.
  string port = 2;  // The port of the device.
  string serialNumber = 3;  // The serial number of the device.
  string model = 4;  // The model of the device.
}

// Contains information about the device farm, including test machines.
message DeviceFarmInfo {
  repeated TestMachine machines = 1;  // A list of test machines in the device farm.
}

// Represents a test machine in the system.
message TestMachine {
  string ipAddress = 1;  // The IP address of the test machine.
  string name = 2;  // The name of the test machine.
  string location = 3;  // The location of the test machine.
  bool isBusy = 4;  // Indicates if the test machine is busy.
  repeated DeviceFarmDevice devices = 5;  // A list of devices connected to the test machine.
}

// An empty message typically used for requests that do not need any input.
message Empty {}

// Enum representing the type of file being uploaded.
enum FileType {
  TestApk = 0;  // Test APK file.
  AndroidApk = 1;  // Android APK file.
  AppBundle = 2; // The android app bundle.
}
