syntax = "proto3";

package dev.oianmol.opentestlab;

import "device_farm.proto";
import "test_execution.proto";
import "report_management.proto";

option java_multiple_files = true;

// Service for managing device farm information.
service DeviceFarmService {
  // Retrieves the device farm information.
  rpc GetDeviceFarm(Empty) returns (DeviceFarmInfo);
}

// Service for test execution on the device farm.
service TestExecutionService {
  // Uploads a test APK and returns log messages.
  rpc UploadTestApk(stream TestApkUpload) returns (stream StreamLogs);

  // Executes tests based on the provided specification and returns the results.
  rpc ExecuteTests(DeviceFarmTestSpec) returns (DeviceFarmTestResults);
}

// Service for managing test reports.
service ReportManagementService {
  // Pulls report files for a specific CI build.
  rpc PullReportFiles(ReportsRequest) returns (stream ReportFiles);
}