syntax = "proto3";
import "device_farm.proto";

package dev.oianmol.opentestlab;

option java_multiple_files = true;

// Specifies the test details to be executed on the device farm.
message DeviceFarmTestSpec {
  string ciUniqueBuildNumber = 1;  // The unique build number from the CI system.
  string listenerClass = 2;  // The class name of the test listener.
  string testPackageFilter = 3;  // The filter for test packages.
  string instrumentPackage = 4;  // The instrumentation package name.
  string customRunner = 5;  // The custom test runner class name.
  string packageName = 6;
  string testPackageName = 7;
}

// Contains the results of the tests executed.
message DeviceFarmTestResults {

  // Represents a name-value pair property.
  message Property {
    string name = 1;  // The name of the property.
    string value = 2;  // The value of the property.
  }

  // Contains a list of properties.
  message Properties {
    repeated Property property = 1;  // A list of properties.
  }

  // Represents a single test case result.
  message Testcase {
    string classname = 1;  // The class name of the test case.
    string name = 2;  // The name of the test case.
    string status = 3;  // The status of the test case (e.g., passed, failed).
    uint32 time = 4;  // The time taken by the test case.
    string trace = 5;  // The stack trace if the test case failed.
    string message = 6;  // The failure message if the test case failed.
    string type = 7;  // The type of the test case.
  }

  // Represents a suite of tests.
  message Testsuite {
    uint32 errors = 1;  // The number of errors in the test suite.
    uint32 failures = 2;  // The number of failures in the test suite.
    string hostname = 3;  // The hostname where the test suite was run.
    string name = 4;  // The name of the test suite.
    Properties properties = 5;  // The properties of the test suite.
    uint32 skipped = 6;  // The number of skipped tests in the test suite.
    repeated Testcase testcase = 7;  // A list of test cases in the test suite.
    uint32 tests = 8;  // The total number of tests in the test suite.
    uint32 time = 9;  // The total time taken by the test suite.
    string timestamp = 10;  // The timestamp when the test suite was run.
  }

  repeated Testsuite testsuite = 1;  // A list of test suites.
}

// Used for uploading test APK files.
message TestApkUpload {
  bytes testApk = 1;  // The binary content of the test APK.
  string ciUniqueBuildNumber = 2;  // The unique build number from the CI system.
  FileType fileType = 3;  // The type of the file being uploaded.
}

// Represents a log message stream.
message StreamLogs {
  string message = 1;  // The log message.
}
